--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "lirtha's blog"
+title                    : "Phosphoenolpyruvate"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "lirtha"
@@ -96,7 +96,7 @@ author:
   name             : "lirtha"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : # "I am an **amazing** person."
-  location         : ""
+  location         : 
   email            :
   links:
     - label: "Email"
