update config, add sitemap.xml

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Phosphoenolpyruvate"
+title                    : "lirtha blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "lirtha"
@@ -95,8 +95,8 @@ analytics:
 author:
   name             : "lirtha"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : # "I am an **amazing** person."
-  location         : 
+  bio              : "Phosphoenolpyruvate"
+  location         : "South Korea"
   email            :
   links:
     - label: "Email"
